--- a/9eme_vote.html
+++ b/9eme_vote.html
@@ -168,7 +168,7 @@
 
     <div class="container vote-container">
         <!-- Groupe 1 -->
-        <div class="group-card">
+        <div class="group-card" data-group="1">
             <div class="group-header">
                 <h2 class="group-title">Groupe 1</h2>
                 <p class="text-secondary">4 membres</p>
@@ -179,7 +179,7 @@
         </div>
 
         <!-- Groupe 2 -->
-        <div class="group-card">
+        <div class="group-card" data-group="2">
             <div class="group-header">
                 <h2 class="group-title">Groupe 2</h2>
                 <p class="text-secondary">4 membres</p>
@@ -190,16 +190,16 @@
         </div>
 
         <!-- Groupe 3 -->
-        <div class="group-card">
+        <div class="group-card" data-group="3">
             <div class="group-header">
                 <h2 class="group-title">Groupe 3</h2>
                 <p class="text-secondary">4 membres</p>
             </div>
             <div class="projects-grid" id="group3-projects">
                 <!-- Les projets seront ajoutés ici dynamiquement -->
-                </div>
             </div>
         </div>
+    </div>
 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
