--- a/s2_vote.html
+++ b/s2_vote.html
@@ -168,7 +168,7 @@
 
     <div class="container vote-container">
         <!-- Groupe 1 -->
-        <div class="group-card">
+        <div class="group-card" data-group="1">
             <div class="group-header">
                 <h2 class="group-title">Groupe 1</h2>
                 <p class="text-secondary">4 membres</p>
@@ -179,7 +179,7 @@
         </div>
 
         <!-- Groupe 2 -->
-        <div class="group-card">
+        <div class="group-card" data-group="2">
             <div class="group-header">
                 <h2 class="group-title">Groupe 2</h2>
                 <p class="text-secondary">4 membres</p>
@@ -190,7 +190,7 @@
         </div>
 
         <!-- Groupe 3 -->
-        <div class="group-card">
+        <div class="group-card" data-group="3">
             <div class="group-header">
                 <h2 class="group-title">Groupe 3</h2>
                 <p class="text-secondary">4 membres</p>
